# c_cpp

./: .gitignore  404.html  README.md  exec.cpp  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  ubuntu_installer.sh
.github/_utils/: tests.py
.github/workflows/: tests.yml
_utils/: tests.py
bubble_sort/: main.cpp
c/: index.html
c/compiler/: index.html
c/d_types_ops/: index.html
c/kwd_var_const/: index.html
c/structure/: index.html
dice_roll/: main.cpp
docs/: index.md
docs/c/: compiler.md  d_types_ops.md  kwd_var_const.md  structure.md
lorem_ipsum/: main.cpp  source.txt
search/: search_index.json
