[tool.poetry]
name = "c-cpp"
version = "0.1.0"
description = "Mkdocs documentation"
authors = ["externref <shiva02939@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.13.0"
mkdocs = "^1.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^9.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
